tests/whiley/invalid/test_44.wyal
assert "assertion failed":
    forall(int[] arr, int[] arr$1, int[] arr$2, int x):
        if:
            either:
                x > 0
                arr == [1, 2, 4]
                arr$2 == arr
            or:
                x <= 0
                arr$1 == [1, 2, 3]
                arr$2 == arr$1
            arr$2[0] < |arr$2|
            arr$2[1] < |arr$2|
        then:
            arr$2[2] != |arr$2|


